--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ asn1crypto==0.24.0
 backcall==0.1.0
 bcrypt==3.1.6
 bleach==3.1.0
-boto3==1.9.91
-botocore==1.12.92
+boto3==1.9.96
+botocore==1.12.96
 certifi==2018.11.29
-cffi==1.11.5
+cffi==1.12.0
 chardet==3.0.4
 Click==7.0
-cryptography==2.5
+cryptography==2.4.2
 decorator==4.3.2
 defusedxml==0.5.0
 docutils==0.14
@@ -38,7 +38,7 @@ numpy==1.16.1
 pandas==0.24.1
 pandocfilters==1.4.2
 paramiko==2.4.2
-parso==0.3.3
+parso==0.3.4
 pexpect==4.6.0
 pickleshare==0.7.5
 prometheus-client==0.5.0
@@ -67,3 +67,4 @@ wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
 widgetsnbextension==3.4.2
+yolk3k==0.9
