--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+alabaster==0.7.12
 appnope==0.1.0
 asn1crypto==0.24.0
+Babel==2.6.0
 backcall==0.1.0
 bcrypt==3.1.6
 bleach==3.1.0
@@ -16,6 +18,7 @@ docutils==0.14
 entrypoints==0.3
 Flask==1.0.2
 idna==2.8
+imagesize==1.1.0
 ipykernel==5.1.0
 ipython==7.2.0
 ipython-genutils==0.2.0
@@ -29,12 +32,14 @@ jupyter==1.0.0
 jupyter-client==5.2.4
 jupyter-console==6.0.0
 jupyter-core==4.4.0
+Markdown==3.0.1
 MarkupSafe==1.1.0
 mistune==0.8.4
 nbconvert==5.4.1
 nbformat==4.4.0
 notebook==5.7.4
 numpy==1.16.1
+packaging==19.0
 pandas==0.24.1
 pandocfilters==1.4.2
 paramiko==2.4.2
@@ -45,9 +50,12 @@ prometheus-client==0.5.0
 prompt-toolkit==2.0.8
 ptyprocess==0.6.0
 pyasn1==0.4.5
+Pycco==0.6.0
 pycparser==2.19
 Pygments==2.3.1
 PyNaCl==1.3.0
+pyparsing==2.3.1
+pystache==0.5.4
 python-dateutil==2.8.0
 pytz==2018.9
 pyzmq==17.1.2
@@ -57,6 +65,10 @@ s3transfer==0.2.0
 scipy==1.2.1
 Send2Trash==1.5.0
 six==1.12.0
+smartypants==2.0.1
+snowballstemmer==1.2.1
+Sphinx==1.8.4
+sphinxcontrib-websupport==1.1.0
 terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
